fix overflow

--- a/1dmoments.css
+++ b/1dmoments.css
@@ -151,6 +151,7 @@ nav {
 }
 
 .container {
+  overflow-x: hidden;
   display: flex;
   justify-content: center;
   flex-direction: row;
